--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div id="app"></div>
 
         <script src="dist/app.bundle.js"></script>
-        <script src="dist/js/vendor/jquery.js" type="text/javascript"></script>
-        <script src="dist/js/vendor/what-input.js" type="text/javascript"></script>
-        <script src="dist/js/vendor/foundation.min.js" type="text/javascript"></script>
-        <script>
+        <!-- <script src="dist/js/vendor/jquery.js" type="text/javascript"></script> -->
+        <!-- <script src="dist/js/vendor/what-input.js" type="text/javascript"></script> -->
+        <!-- <script src="dist/js/vendor/foundation.min.js" type="text/javascript"></script> -->
+        <!-- <script>
             $(document).foundation();
-        </script>
+        </script> -->
     </body>
 </html>
